# wayfindmap_allocation_cmake

./: 1117_scene3_1_17sign  1117_scene3_2_10sign  1117_scene3_3_10sign_50pop  CMakeLists.txt  g++  heatmap  main.cpp  nohup.out  s1  s1CR0.3  s2  s2_re  s3  s3_1  s3_11  s3_13  s3_3  s3_5  s3_6high  s3_7outer  s3_9  t  t1  t11  t2  t22  test
config/: scene1_coordinate.txt  scene1_greedy_allocation.txt  scene1_pedenstrains_timetable.txt  scene2_coordinate.txt  scene2_entrance.txt  scene2_pedenstrains_timetable.txt  scene3_coordinate.txt  scene3_entrance.txt  scene3_greedy_allocation.txt  scene3_pedenstrains_timetable.txt
config/scene12_4s_0highest/: entrance_traffic.txt
config/scene1_2s_leftHigh_rightLow/: scene1_entrance_traffic.txt
config/scene2_2s_leftHigh_rightLow/: scene2_entrance_traffic.txt  scene2_pedenstrains_timetable.txt
config/scene3_10s_elevator/: scene3_entrance_traffic.txt  scene3_pedenstrains_timetable.txt
config/scene3_17s_normal/: scene3_entrance_traffic.txt  scene3_pedenstrains_timetable.txt
config/scene3_200people/: scene3_pedenstrains_timetable.txt
config/scene3_600people/: scene3_pedenstrains_timetable.txt
config/scene3_7s_outer/: scene2_entrance_traffic.txt  scene2_pedenstrains_timetable.txt  scene3_entrance_traffic.txt  scene3_pedenstrains_timetable.txt
include/: Global.h  Ibea_solver.h  Individual.h  Population.h  Simulator.h  Util.h
result/Comparison/: diff_scene1_comparison_1000ranksum4  diff_scnen2_comparison_1000ranksum4  scene1_comparison4  (+11 more)
src/: Global.cpp  Ibea_solver.cpp  Individual.cpp  Population.cpp  Simulator.cpp
(+67 files in other folders)
